wrap <code> content and fix footer icons margins

--- a/_sass/_2-base.sass
+++ b/_sass/_2-base.sass
@@ -52,6 +52,7 @@ pre
 	padding: 10px 20px
 
 code
+	word-wrap: break-word
 	font-size: em(12px)
 	padding: em(4px) em(6px)
 	color: $white
@@ -161,7 +162,7 @@ code
 		
 		li
 			display: inline
-			margin-right: 1em
+			margin: 1em
 
 	.footer-text
 		color: $white
